Color changes in each page and added image for landingpage

--- a/src/components/CSS/listersignup.css
+++ b/src/components/CSS/listersignup.css
@@ -2,7 +2,7 @@
     --dark-blue: #1a2b47;
     --medium-blue: #2d4263;
     --light-blue: #3e5f8a;
-    --orange: #ff7d00;
+    --orange: rgb(255, 98, 0);
     --light-orange: #ff9a40;
     --text-light: #f5f5f5;
     --text-dark: #333333;
