--- a/src/components/CSS/About.css
+++ b/src/components/CSS/About.css
@@ -2,7 +2,7 @@
 
 :root {
   --dark-blue: #1a2b47;
-  --orange: #ff7d00;
+  --orange: rgb(255, 98, 0);
   --text-light: #f5f5f5;
   --light-orange: #ffc266;
   --glow: 0 0 15px rgba(255, 125, 0, 0.6);
